# CloudLibrary

./: .ycm_extra_conf.py  CMakeLists.txt  main.cpp
include/: algorithms.hpp  camera.h  cl.hpp  io.h  io.hpp  point_cloud.hpp  visualiser.h  visualiser.hpp
shaders/: point_fragment.shader  point_vertex.shader
src/: point_cloud.cpp  visualiser.cpp  visualiser_impl.hpp
tests/: cl_tests.cpp  point_cloud_unit_test.cpp  visualiser_test.cpp
